HAWQ-1334. QD thread should set error code if failing so that the main process for the query could exit soon