src/backend/cdb/dispatcher_mgt.c
@@ -281,22 +281,26 @@ dispmgt_thread_func_run(QueryExecutorGroup *group, struct WorkerMgrState *state)
 	QueryExecutorInGroupIterator	iterator;
 	struct DispatchData 			*data = group->team->refDispatchData;
 	struct QueryExecutor			*executor;
+	struct QueryExecutor			*err_handle_executor = NULL;
 
 	/* Assume the connections are already set up. */
 	dispmgt_init_query_executor_in_group_iterator(group, &iterator, false);
 	while ((executor = dispmgt_get_query_executor_in_group_iterator(group, &iterator)) != NULL)
 	{
+		if (err_handle_executor == NULL)
+			err_handle_executor = executor;
+
 		if (workermgr_should_query_stop(state)) {
-			write_log("+++++++++%s meets should query "
-					  "stop before dispatching, entering error_cleanup",
-					  __func__);
+			write_log("%s(): query is canceled before dispatching. "
+					  "Will exit and clean up.", __func__);
+			err_handle_executor = executor;
 			goto error_cleanup;
 		}
 
 		if (!executormgr_dispatch_and_run(data, executor)) {
-			write_log("+++++++++%s meets dispatch_and_run "
-					  "problem when dispatching, entering error_cleanup",
-					  __func__);
+			write_log("%s(): query cannot dispatch and run. "
+					  "Will exit and clean up.", __func__);
+			err_handle_executor = executor;
 			goto error_cleanup;
 		}
 	}
@@ -310,9 +314,8 @@ dispmgt_thread_func_run(QueryExecutorGroup *group, struct WorkerMgrState *state)
 
 		/* Check global state to abort query, this let poll process easier. */
 		if (workermgr_should_query_stop(state)){
-			write_log("%s meets should query stop when "
-					  "polling executors, entering error_cleanup",
-					  __func__);
+			write_log("%s(): query is canceled before polling executors."
+					  "Will exit and clean up.", __func__);
 			goto error_cleanup;
 		}
 		/* Skip the stopped executor make the logic easy to understand. */
@@ -321,9 +324,10 @@ dispmgt_thread_func_run(QueryExecutorGroup *group, struct WorkerMgrState *state)
 		{
 			if (!executormgr_check_segment_status(executor))
 			{
-				write_log("Detected one segment (Global ID: %d) is down, so "
-						  "abort the query that is running or will run on it",
-						  executormgr_get_ID(executor));
+				write_log("%s(): detected one segment (Global ID: %d) is down, "
+						  "so abort the query that is running or will run on it",
+						  __func__, executormgr_get_ID(executor));
+				err_handle_executor = executor;
 				goto error_cleanup;
 			}
 
@@ -359,6 +363,8 @@ dispmgt_thread_func_run(QueryExecutorGroup *group, struct WorkerMgrState *state)
 			 * System call poll error is only caused by program bug or system
 			 * resources unavailable. In this case, fail the query is okay.
 			 */
+			write_log("%s(): poll() failed with errno: %d. "
+					  "Will exit and clean up.", __func__, SOCK_ERRNO);
 			goto error_cleanup;
 		}
 
@@ -386,7 +392,9 @@ dispmgt_thread_func_run(QueryExecutorGroup *group, struct WorkerMgrState *state)
 				continue;
 
 			if (!executormgr_consume(executor)) {
-				write_log("%s meets consume error for executor, entering error_cleanup", __func__);
+				write_log("%s(): fail to consume data. "
+						  "Will exit and clean up.", __func__);
+				err_handle_executor = executor;
 				goto error_cleanup;
 			}
 		}
@@ -415,6 +423,16 @@ error_cleanup:
 		if (!executormgr_has_error(executor))
 			continue;
 	}
+
+	/*
+	 * Previously query failed, probably in this executor. We need to
+	 * set error code here if it has not been set although the executor
+	 * is probably fine. This let the main process for the query proceed
+	 * to cancel the query in its thread also, without waiting for a long
+	 * time. We expect the error code have been set previously before jumping
+	 * to error_cleanup. The code below could be the last defence.
+	 */
+	executormgr_seterrcode_if_needed(err_handle_executor);
 
 thread_return:
 	return;
